--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,7 @@ margin-bottom: 20px;
 }
 
 .section-prices .sign-online {
-    display: block;
+    /* display: block; */
     margin: 0 auto;
     margin-top: 50px;
 }
@@ -644,15 +644,6 @@ text-transform: uppercase;
   color: var(--white-text);
 }
 
-/* .message-box {
-    color:var(--grey-text-op40);
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid var(--grey-text-op40);
-    font-weight: 600;
-    font-size: 11px;
-    line-height: 15px;
-} */
 
 .signform input::placeholder,
 .signform textarea::placeholder {
@@ -663,6 +654,8 @@ text-transform: uppercase;
   line-height: 1.36;
   letter-spacing: 0.1em;
   background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--grey-text-op40);
 }
 
 .signform input,
@@ -678,6 +671,17 @@ text-transform: uppercase;
   color: var(--white-text);
   background: transparent;
 }
+
+.signform input[name='name'] {
+    width: 270px;
+    margin-right: 30px;
+    padding-bottom: 8px;
+}
+
+.signform textarea[name='msg'] {
+    width: 560px;
+    
+  }
 
 .adr-btn {
     color:var(--grey-text);
@@ -713,6 +717,7 @@ text-transform: uppercase;
 }
 
 .work-hours {
+    margin-bottom: 20px;
     color:var(--white-text);
     font-weight: 600;
     font-size: 11px;
@@ -720,3 +725,95 @@ text-transform: uppercase;
     font-family: 'Open Sans', sans-serif;
 }
 
+.work-hours::before {
+    content:"";
+    display: inline-block;
+    height:1px;
+    width: 60px;
+    margin-right: 20px;
+    background-color: var(--grey-text-op60);
+    vertical-align: middle;
+}
+
+.contacts .container {
+    display:flex;
+    align-items: baseline;
+    justify-content: left;
+    padding: 130px 55px;
+}
+
+/* .signform {
+    display: flex;
+    flex-direction: column;
+} */
+
+
+.sign-name-tel {
+    display:flex;
+    margin-bottom: 44px;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+
+.sign-name-tel .input-name, 
+.sign-name-tel .input-tel {
+    border:none;
+    border-bottom: 1px solid var(--grey-text-op60);
+    height:24px;
+    color:var(--grey-text);
+}
+
+.contacts-foot {
+    margin-left: 140px;
+}
+
+.address-list-foot li:nth-child(2) {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.address-list-foot li:nth-child(3) {
+    margin-bottom: 70px;
+}
+
+/* .message-area {
+    border:1px solid var(--grey-text);
+    border-bottom: 1px solid var(--grey-text);
+    height:76px;
+    color:var(--grey-text);
+    
+} */
+
+.message-box {
+    display:block;
+    margin-bottom: 44px;
+    height:76px;
+    color:var(--grey-text-op60);
+}
+
+.footer .container {
+    padding:56px;
+    justify-content: space-between;
+    display: flex;
+    align-items: baseline;
+}
+
+.social-netw-footer {
+display:flex;
+}
+
+.social-netw-footer li:nth-child(1){
+    margin-right: 40px;
+}
+
+.social-netw-footer li:nth-child(1)::before{
+    content:"";
+    display: inline-block;
+    height:1px;
+    width: 60px;
+    margin-right: 20px;
+    background-color: var(--graphite);
+    vertical-align: middle;
+    justify-content: center;
+}
