--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
     width:1200px;
     padding: 0 15px;
     margin: 0 auto;
-    border: 1px solid #FF6C00;
+    /* border: 1px solid #FF6C00; */
 }
 
 .header {
@@ -817,3 +817,42 @@ display:flex;
     vertical-align: middle;
     justify-content: center;
 }
+
+.backdrop-sign {
+    width:100%;
+    height:100%;
+    /* display:flex;
+    align-items: center; */
+    background-color:rgba(23, 26, 36, 0.2);
+    position:fixed;
+    top:0;
+    left: 0; 
+    transition: opacity var(--transition-time);
+}
+
+.modal-sign {
+    position:absolute;
+    /* margin: 0 auto; */
+    top:50%;
+    left:50%;
+    transform: translateX(-50%) translateY(-50%);
+    width:528px;
+    height:581px;
+    background-color: white; 
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px; 
+}
+
+.backdrop-modal-btn {
+    position:absolute;
+    top:8px;
+    left:8px;
+    cursor:pointer;
+}
+
+.backdrop-sign.is-hidden {
+    opacity:0;
+ pointer-events: none;
+}
+
+
